:lipstick: Fix icon alignment

--- a/src/renderer/editor/editor.scss
+++ b/src/renderer/editor/editor.scss
@@ -74,3 +74,9 @@ $toolbar-padding: 10px;
     color: white;
   }
 }
+
+#kando-editor-container .inline-icon {
+  line-height: unset;
+  font-size: unset;
+  vertical-align: top;
+}
