--- a/src/renderer/editor/sidebar/sidebar.scss
+++ b/src/renderer/editor/sidebar/sidebar.scss
@@ -35,6 +35,7 @@
   }
 
   #kando-editor-sidebar {
+    pointer-events: none;
     position: absolute;
     top: 0px;
     bottom: 0px;
@@ -61,18 +62,6 @@
         transition-delay: #{($i - 1) * 30}ms;
       }
     }
-
-    .material-symbols-rounded {
-      font-size: unset;
-      line-height: unset;
-      position: relative;
-      vertical-align: middle;
-      top: -0.1em;
-    }
-  }
-
-  &.visible #kando-editor-sidebar:not(.visible) {
-    pointer-events: none;
   }
 
   &.visible #kando-editor-sidebar.visible .sidebar-item {
